# try

./: CMakeLists.txt  硬件技术团队编程基础作业.md
src/: algebra.c
